--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jeremiah Isu
 #logo
-description: Graduate Student | Math Tutor
+description: PhD Student at the University of Oklahoma
 #show_downloads: true
 theme: jekyll-theme-minimal
