--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: About Me!
+title: About Me
 logo: docs/assets/My_headshot.jpg
 description: [isujeremiah@ou.edu](isujeremiah@ou.edu)
 #show_downloads: true
