--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
 title: "Jeremiah Isu"
 logo: "docs/assets/My_headshot.jpg"
-description: "[isujeremiah@ou.edu](mailto:isujeremiah@ou.edu)"
+description: [isujeremiah@ou.edu](mailto:isujeremiah@ou.edu)
 theme: jekyll-theme-minimal
