--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
----
-title: "Jeremiah Isu"
-logo: "docs/assets/My_headshot.jpg"
-description: [isujeremiah@ou.edu](mailto:isujeremiah@ou.edu)
+title: Jeremiah Isu
+email: isujeremiah@ou.edu
+description: Undergraduate Student at University of Oklahoma
+logo: docs/assets/My_headshot.jpg
 theme: jekyll-theme-minimal
