--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jeremiah Isu
 email: isujeremiah@ou.edu
-description: Undergraduate Student at University of Oklahoma
+description: PhD Student at the University of Oklahoma
 logo: docs/assets/My_headshot.jpg
 theme: jekyll-theme-minimal
