--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Jeremiah Isu
-email: isujeremiah@ou.edu
-description: PhD Student at the University of Oklahoma
+title: About Me
+description: PhD Student | Quantum enthusiast
 logo: docs/assets/My_headshot.jpg
 theme: jekyll-theme-minimal
