--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ logo: docs/assets/My_headshot.jpg
 # Personal Information
 links:
   - name: "Email"
-    url: "mailto:yourname@example.com"
+    url: "mailto:isujeremiah@ou.edu"
   - name: "CV"
     url: "https://yourwebsite.com/cv.pdf"
 
