--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ description: PhD Student | Quantum enthusiast
 logo: docs/assets/My_headshot.jpg
 # Personal Information
 links:
-  - email: "yourname@example.com"
-cv: "https://yourwebsite.com/cv.pdf"
+  -email: "isujeremiah@ou.edu"
+cv: "https://yourwebsite.com/your-cv.pdf"
 
 
 theme: jekyll-theme-minimal
