--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: About Me
-description: PhD Student | Quantum enthusiast
+description: PhD Student | Quantum Informaiton Theorist
 logo: docs/assets/My_headshot.jpg
 # Personal Information
 links:
